--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:lHFAQzrq725qIWNqvdKH6DjZL4GY6JgNcq7x0ffd0WQ=
 APP_DEBUG=true
-APP_URL=http://localhost/eduglobe
+APP_URL=http://edudeve.com
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=eduglobe
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=u206469626_SMS_db
+DB_USERNAME=u206469626_SMS_User123
+DB_PASSWORD=SMS_User_Pass123@
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
