--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:lHFAQzrq725qIWNqvdKH6DjZL4GY6JgNcq7x0ffd0WQ=
 APP_DEBUG=true
-APP_URL=http://edudeve.com
+APP_URL=http://localhost/eduglobe
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=u206469626_SMS_db
-DB_USERNAME=u206469626_SMS_User123
-DB_PASSWORD=SMS_User_Pass123@
+DB_DATABASE=eduglobe
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -31,13 +31,14 @@ REDIS_PORT=6379
 
 
 MAIL_MAILER=smtp
-MAIL_HOST=smtp.hostinger.com
-MAIL_PORT=465
-MAIL_USERNAME=ceo@edudeve.com
-MAIL_PASSWORD=EdudevCeo123@
+MAIL_HOST=sandbox.smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=1782d12afeb8d2
+MAIL_PASSWORD=0a96e7726a097e
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS="ceo@edudeve.com"
-MAIL_FROM_NAME="EDUDEVE"
+MAIL_FROM_ADDRESS=cont2chhoton@gmail.com
+MAIL_FROM_NAME=Edugolbe
+MAIL_AUTH_MODE=login
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
